  Petteri Aimonen (2013-4-22).
* NxWM::CScrollbarPanel:  Fix spelling error in class name: CScollbarPanel
  should be CScrollbarPanel.  From Petteri Aimonen (2013-4-22).
* NxWidgets:: CGlyphButton: Generate action event, like CButton does.
  From Petteri Aimonen (2013-4-22).
* NxWidgets:: CGlyphButton:  Prevent drawing outside of the bitmap size.
  From Petteri Aimonen (2013-4-22).
* NxWM::CTaskBar:  Add option CONFIG_NXWM_TASKBAR_NO_BORDER to suppress
  drawing of the border on the taskbar.  From Petteri Aimonen (2013-4-22).
* NxWidgets::CNxTimer:  Add function to check if CNxTimer is running.
  From Petteri Aimonen (2013-4-22).
* NxWidgets::CNxWidgets:  Allow overriding of the checkCollision() method.
  From Petteri Aimonen (2013-4-22).

1.8 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

*  NxWM::CMediaPlayer: shell application for an MP3 Media Player with
   Kconfig settings to enable it.  I plan to write this app to help
   develop and test the MP3 codec chip driver.  It really doesn't do
   anything yet except display a text box saying "Coming soon", and I
   need to minimize the icon size a bit.  From Ken Pettit (2013-5-11).
*  NxWidgets/nxwm/src/glyph_mediaplayer.cxx:  Smaller version of the
   media player glyph.  From Ken Pettit (2013-5-12).
*  NxWidgets/nxwm/include/ccalibration.hxx and src/ccalibration.cxx:
   Fix a race condition that would cause the calibration screen
   to fail to come up when its icon was touched (From Ken Pettit,
   2013-5-12).
*  Kconfig:  Default priorities for NxWidget and NxWM threads
   should be 100, not 50, to be consistent with other default priorities.
*  NxWidgets::CGlyphSliderHorizontal and NxWidgets::CGlyphSliderHorizontalGrip:
   New widgets added by Ken Pettit (2013-5-15).
*  NxWidgets/UnitTests/CGlyphSliderHorizontal:  Addes a unit test for the
   NxWidgets::CGlyphSliderHorizontal class. From Ken Pettit (2013-5-17) .
*  NxWidgets::CGlyphSliderHorizontal:  Fix a drawing error.  From Ken
   Pettit (2013-5-17).