@@ -1,5 +1,4 @@
 /Make.dep
-/.context
 /.depend
 /.built
 /*.asm
